# backend-cockfighting-q3-2023-rust

./: Cargo.toml  Dockerfile  README.md  benchmark.js  docker-compose.benchmark.yml  docker-compose.test.yml
.github/workflows/: benchmark-contract-ko.yml  benchmark-gatling.yml  benchmark-post-heavy.yml  benchmark-search-heavy.yml  benchmark-smoke.yml  benchmark.yml  ci.yml  diagnose-direct.yml
benchmarks/: contract-ko.js  get-by-id-heavy.js  mixed-rinha-like.js  post-heavy.js  search-heavy.js  smoke.js
docker/nginx/: nginx.conf
docker/postgres/: init.sql
rinhabackendsimulation-20260702201332641/: index.html  req_busca-inva-lida-b5618.html  req_busca-va-lida-d7f0d.html  req_consulta-5d76b.html  req_criac-a-o-ce502.html
rinhabackendsimulation-20260702201332641/js/: all_sessions.js  assertions.json  global_stats.json  stats.js  stats.json
rinhabackendsimulation-20260703152917024/: index.html  req_busca-inva-lida-b5618.html  req_busca-va-lida-d7f0d.html  req_consulta-5d76b.html  req_criac-a-o-ce502.html
rinhabackendsimulation-20260703152917024/js/: all_sessions.js  assertions.json  global_stats.json  stats.js  stats.json
rinhabackendsimulation-20260703184819623/: index.html  req_busca-inva-lida-b5618.html  req_busca-va-lida-d7f0d.html  req_consulta-5d76b.html  req_criac-a-o-ce502.html
rinhabackendsimulation-20260703184819623/js/: all_sessions.js  assertions.json  global_stats.json  stats.js  stats.json
src/: main.rs  minimal.rs
tests/: integration.rs
