[package]
name = "hyper-example"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "=1.10.1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7", "serde"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
deadpool-postgres = "0.14"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
